--- a/gameRater.html
+++ b/gameRater.html
@@ -83,7 +83,7 @@
             
             <select name="gameGenre1" id="">
             <option value="">None</option>
-            <option value="fps">First Person Shooter</option>
+            <option value="fps">First toto Shooter</option>
             <option value="fg">Fighting Game</option>
             <option value="rpg">Role Playing Game</option>
             <option value="pf">Platformer</option>
